--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.exabrial</groupId>
 	<artifactId>javax-security-cdi-extension</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<description>javax.security CDI Portable Extension</description>
 	<name>${project.artifactId}</name>
@@ -16,7 +13,7 @@
 		<connection>scm:git:ssh://git@github.com/exabrial/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/exabrial/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/exabrial/${project.artifactId}/tree/master</url>
-		<tag>HEAD</tag>
+		<tag>javax-security-cdi-extension-1.0.0</tag>
 	</scm>
 
 	<properties>
