--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.exabrial</groupId>
 	<artifactId>javax-security-cdi-extension</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>javax.security CDI Portable Extension</description>
 	<name>${project.artifactId}</name>
@@ -13,7 +13,7 @@
 		<connection>scm:git:ssh://git@github.com/exabrial/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/exabrial/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/exabrial/${project.artifactId}/tree/master</url>
-		<tag>javax-security-cdi-extension-1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<properties>
